--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,184 +1,1 @@
-body {
-  font-family: Georgia;
-  padding: 0;
-  margin: 0;
-}
-
-.container {
-  width: 1000px;
-  margin: 0 auto;
-}
-
-.read-more-container {
-  margin-top: 30px;
-  height: 400px;
-  overflow: hidden;
-  line-height: 1.5;
-}
-.read-more-container h2 {
-  margin-top: 20px;
-  font-size: 16px;
-  text-transform: uppercase;
-  letter-spacing: 0.01em;
-}
-
-ul {
-  list-style: none;
-}
-
-.logo {
-  position: absolute;
-  left: 50%;
-  margin-left: -41px;
-  top: 9px;
-}
-
-.button {
-  background-color: #1e344c;
-  padding: 10px;
-  color: white;
-  margin-top: 10px;
-  text-decoration: none;
-}
-
-h1 {
-  font-size: 20px;
-}
-
-h3 {
-  font-size: 14px;
-  color: #133944;
-}
-
-.images-container {
-  margin-top: 50px;
-  overflow: hidden;
-}
-
-.first-image, .second-image, .third-image {
-  float: left;
-  width: 30%;
-  margin-right: 5%;
-}
-.first-image img, .second-image img, .third-image img {
-  max-width: 100%;
-}
-
-.third-image {
-  margin-right: 0;
-}
-
-.image-container {
-  height: 150px;
-  margin-bottom: 20px;
-  overflow: hidden;
-}
-
-.navigation {
-  font-family: arial;
-  text-align: center;
-  background-color: #124385;
-}
-.navigation ul {
-  display: inline-block;
-  height: 60px;
-  margin: 0;
-}
-.navigation ul li {
-  display: inline-block;
-  text-align: left;
-  float: left;
-  height: 60px;
-  margin: 0;
-  background-color: #124385;
-  width: 150px;
-}
-.navigation ul li:nth-child(3) {
-  margin-right: 150px;
-}
-.navigation ul li a {
-  color: white;
-  text-decoration: none;
-  line-height: 60px;
-  padding: 0 15px;
-}
-.navigation ul li a:hover {
-  text-decoration: underline;
-}
-
-.sub-navigation {
-  font-family: arial;
-  margin-bottom: 60px;
-  text-align: center;
-  background-color: #e5ebee;
-}
-.sub-navigation ul {
-  display: inline-block;
-  height: 60px;
-  margin: 0;
-  padding: 0;
-}
-.sub-navigation ul li {
-  float: left;
-  height: 60px;
-  width: auto;
-  margin: 0;
-}
-.sub-navigation ul li a {
-  color: #133944;
-  text-decoration: none;
-  line-height: 60px;
-  padding: 0 15px;
-}
-.sub-navigation ul li a:hover {
-  text-decoration: underline;
-}
-
-.lightbox {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.lightbox .lightboxImage {
-  position: absolute;
-  left: 30%;
-  top: 30%;
-  border: 10px solid white;
-}
-
-footer {
-  font-family: arial;
-  overflow: hidden;
-  font-size: 12px;
-  background-color: #e5ebee;
-  margin-top: 50px;
-  padding-top: 20px;
-}
-footer nav {
-  float: left;
-  width: 25%;
-  margin-bottom: 20px;
-}
-footer h3 {
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-footer ul {
-  margin: 0;
-  padding: 0;
-}
-footer ul li {
-  margin: 0;
-  display: block;
-  padding: 10px 0;
-}
-footer a {
-  text-decoration: none;
-  color: #1e344c;
-}
-footer a:hover {
-  text-decoration: underline;
-}
+body{background-color:#fff;color:#000;font-family:Georgia;font-size:1em;padding:0;margin:0}ul{list-style:none}h1{font-size:1.3em}h3{font-size:0.9em;color:#133944}.container{width:90%;margin:0 auto}.lightbox{background-color:rgba(0,0,0,0.7);position:fixed;top:0;left:0;right:0;bottom:0}.lightbox .lightboxImage{position:absolute;left:30%;top:30%;border:10px solid #fff;width:40%}header .logo{position:absolute;left:50%;margin-left:-41px;top:9px}header .navigation{font-family:arial;text-align:center}header .navigation ul{display:inline-block;min-height:60px;margin:0}header .navigation ul li{display:inline-block;float:left;min-height:60px;margin:0}header .navigation ul li a{text-decoration:none;line-height:60px;padding:0 15px}header .navigation ul li a:hover{text-decoration:underline}header .navigation.main-navigation{background-color:#124385}header .navigation.main-navigation ul li{text-align:left;min-width:150px}header .navigation.main-navigation ul li:nth-child(3){margin-right:150px}header .navigation.main-navigation ul li a{color:#fff}header .navigation.sub-navigation{text-align:center;background-color:#e5ebee}header .navigation.sub-navigation ul li{width:auto}header .navigation.sub-navigation ul li a{color:#133944;padding:0 15px}section.container .read-more-container{margin-top:30px;height:400px;overflow:hidden;line-height:1.5;margin-bottom:15px;padding-bottom:20px}section.container .read-more-container h2{margin-top:20px;font-size:1em;text-transform:uppercase;letter-spacing:0.01em}section.container .button{background-color:#1e344c;padding:10px;color:#fff;margin-top:10px;text-decoration:none}section.images-container{margin-top:50px;overflow:hidden}section.images-container .first-image,section.images-container .second-image,section.images-container .third-image{float:left;width:30%;margin-right:5%}section.images-container .first-image img,section.images-container .second-image img,section.images-container .third-image img{max-width:100%;cursor:pointer}section.images-container .third-image{margin-right:0}section.images-container .image-container{max-height:150px;margin-bottom:20px;overflow:hidden}footer{font-family:arial;overflow:hidden;font-size:0.8em;background-color:#e5ebee;margin-top:50px;padding-top:20px}footer nav{float:left;width:25%;margin-bottom:20px;text-align:center}footer h3{text-transform:uppercase;margin-bottom:20px}footer ul{margin:0;padding:0}footer ul li{margin:0;display:block;padding:10px 0}footer a{text-decoration:none;color:#133944}footer a:hover{text-decoration:underline}@media screen and (max-width: 1100px){body{font-size:0.7em}header .logo{position:fixed;margin-left:10;top:3px;left:0;width:50px;z-index:1}header .navbar{position:fixed;top:0;width:100%}header .navigation ul li{min-height:30px;min-width:50px}header .navigation ul li a{line-height:30px}header .navigation.main-navigation ul{padding-left:60px;min-height:30px}header .navigation.main-navigation ul li{min-width:50px}header .navigation.main-navigation ul li:nth-child(3){margin-right:0px}header .navigation.sub-navigation{margin-bottom:30px}header .navigation.sub-navigation ul{min-height:30px;padding:0}section.container{margin-top:100px}.image-container{min-height:58px}.read-more-container{margin-top:0px}}
